--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-sass": "^2.0.3",
     "gulp-util": "^3.0.6",
+    "jest-cli": "^0.5.0",
     "reactify": "^1.1.1",
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
@@ -21,18 +22,21 @@
   "scripts": {
     "dev": "gulp --type dev",
     "start": "gulp",
-    "build": "gulp build"
+    "build": "gulp build",
+    "test": "jest"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
     "testFileExtensions": [
       "es6",
-      "js"
+      "js",
+      "jsx"
     ],
     "moduleFileExtensions": [
       "js",
       "json",
-      "es6"
+      "es6",
+      "jsx"
     ]
   },
   "dependencies": {
